[gd_scene load_steps=17 format=3 uid="uid://b101w1wg2ohn3"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_pskf2"]
[ext_resource type="Texture2D" uid="uid://dkkg35rapg2th" path="res://assets/sprites/slime_green.png" id="1_sh2x6"]
[ext_resource type="Texture2D" uid="uid://dhgavmfsjde2o" path="res://assets/sprites/slime_purple.png" id="2_2ment"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vn4kj"]
properties/0/path = NodePath(".:sync_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:sync_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:sync_hp")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:sync_animation")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_uq7wu"]
atlas = ExtResource("2_2ment")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_23gta"]
atlas = ExtResource("2_2ment")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta1g1"]
atlas = ExtResource("2_2ment")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv4wh"]
atlas = ExtResource("2_2ment")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrxh2"]
atlas = ExtResource("1_sh2x6")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oro1a"]
atlas = ExtResource("1_sh2x6")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gyqg"]
atlas = ExtResource("1_sh2x6")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5fna"]
atlas = ExtResource("1_sh2x6")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rl1dl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq7wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23gta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta1g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv4wh")
}],
"loop": false,
"name": &"Destroyed",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrxh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oro1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gyqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5fna")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jib10"]
size = Vector2(26, 38)

[sub_resource type="GDScript" id="GDScript_6ygeq"]
script/source = "extends Area2D
"

[sub_resource type="CircleShape2D" id="CircleShape2D_gcujy"]
radius = 12.0239

[node name="Slime" type="CharacterBody2D"]
scale = Vector2(0.400002, 0.400002)
script = ExtResource("1_pskf2")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." groups=["enemies"]]
replication_config = SubResource("SceneReplicationConfig_vn4kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visibility_layer = 2
position = Vector2(0, -39)
scale = Vector2(3.19191, 3.19191)
sprite_frames = SubResource("SpriteFrames_rl1dl")
animation = &"Destroyed"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_jib10")

[node name="HitBox2D" type="Area2D" parent="." groups=["enemies"]]
position = Vector2(0, 2.49999)
scale = Vector2(1.77396, 1.08242)

[node name="HitBoxCollision2D" type="CollisionShape2D" parent="HitBox2D"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_jib10")

[node name="DetectionArea2D" type="Area2D" parent="."]
script = SubResource("GDScript_6ygeq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
scale = Vector2(13.3084, 13.3084)
shape = SubResource("CircleShape2D_gcujy")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox2D" to="." method="_on_hit_box_2d_area_entered"]
[connection signal="body_entered" from="HitBox2D" to="." method="_on_hit_box_2d_body_entered"]
[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_detection_area_body_exited"]
